@@ -1,7 +1,9 @@
 version 2.6.0
 --------------
 Many Thanks Gulikoza who helped troubleshooting around the poorly
-documented librsync library.
+documented librsync library. Thanks to "Lademann" at sourceforge for the
+proposed patch adapted and integrated in this release (--ignored-as-symlink
+new feature)
 
 version 2.5.12
 --------------
