@@ -9,6 +9,8 @@ from 2.5.x to 2.6.0
   executed unless user interrupted dar/libdar. This to stay coherent with
   multi sliced archive behavior
 - new feature: display filters nature (-vmasks option)
+- new feature: follow some symlinks as defined by the --ignored-as-symlink
+  option
 
 from 2.5.11 to 2.5.12
 - documenting in man page the limitation of -[ and -] options concerning
